package proxy.dynamic;

public interface ITeacherDao {

    void teach();
}
