@startuml
'https://plantuml.com/class-diagram

interface ITeacherDao
class TeacherDao
class ProxyFactory
class Client

interface ITeacherDao{
teach():void
}

class TeacherDao{
teach():void
}

class ProxyFactory{
ProxyFactory()
getProxyInstance():Object
}

TeacherDao ..|> ITeacherDao
Client ..> ProxyFactory
Client ..> TeacherDao
TeacherDao --o ProxyFactory

@enduml